--- a/pom.xml
+++ b/pom.xml
@@ -171,5 +171,11 @@
       <artifactId>gson</artifactId>
       <version>2.10</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>5.1.2.RELEASE</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
