--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.rgamba</groupId>
-  <artifactId>skipper-core</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <artifactId>skipper</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
 
   <name>skipper</name>
   <url>http://github.com/rgamba/skipper</url>
